feat: add route to invite participant to trip